--- a/Pages/FizzBuzz.razor
+++ b/Pages/FizzBuzz.razor
@@ -3,9 +3,54 @@
 <PageTitle>FizzBuzz</PageTitle>
 
 <div class="container-xxl my-5">
-    <h1>FizzBuzz Page</h1>
+    <h1>Solve the FizzBuzz Challenge</h1>
+    <p>Enter your values and press the button to see how the FizzBuzz challenge is solved.</p>
 </div>
 
+<EditForm Model="fizzBuzzModel" OnValidSubmit="GenerateFizzBuzzResults">
+    <DataAnnotationsValidator />
+    <div class="border border-secondary-subtle rounded p-4">
+        <div class="row row-cols-1 row-cols-md-3 align-items-start">
+            <div class="col mt-2">
+                <label for="fizzValue" class="form-label">Fizz Value</label>
+                <InputNumber id="fizzValue" class="form-control" @bind-Value="fizzBuzzModel.FizzValue" placeholder="Fizz Value" 
+                    aria-describedby="fizzHelp" aria-label="Fizz Value" />
+                <div id="fizzHelp" class="form-text text-muted">Replaces multiples of this number with "Fizz"</div>
+                <ValidationMessage For="() => fizzBuzzModel.FizzValue"/>
+            </div>
+            <div class="col mt-2">
+                <label for="buzzValue" class="form-label">Buzz Value</label>
+                <InputNumber id="buzzValue" class="form-control" @bind-Value="fizzBuzzModel.BuzzValue" placeholder="Buzz Value"
+                             aria-describedby="buzzHelp" aria-label="Buzz Value" />
+                <div id="buzzHelp" class="form-text text-muted">Replaces multiples of this number with "Buzz"</div>
+                <ValidationMessage For="() => fizzBuzzModel.BuzzValue" />
+            </div>
+            <div class="col mt-2">
+                <label for="stopValue" class="form-label">Stop Value</label>
+                <InputNumber id="stopValue" class="form-control" @bind-Value="fizzBuzzModel.StopValue" placeholder="Stop Value"
+                             aria-describedby="stopHelp" aria-label="Stop Value" />
+                <div id="stopHelp" class="form-text text-muted">Will limit the numbers to evaluate</div>
+                <ValidationMessage For="() => fizzBuzzModel.StopValue" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-end mt-2">
+                <button type="submit" class="btn btn-primary" arial-label="Generate FizzBuzz Results">Generate</button>
+            </div>
+        </div>
+    </div>
+</EditForm>
+
 @code {
+
+    private FizzBuzzModel fizzBuzzModel = new();
+    private List<string> fizzBuzzResults = new();
+
+    private void GenerateFizzBuzzResults()
+    {
+        // This method will be called when the form is submitted.
+        // You can implement the logic to generate FizzBuzz results here.
+        // For now, it does nothing.
+    }
 
 }
