--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,5 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using FizzBuzzBlazor
-@using FizzBuzzBlazor.Layout
+@using FizzBuzzBlazor.Components.Layout
 @using FizzBuzzBlazor.Models
+@using FizzBuzzBlazor.Components.Pages
+@using FizzBuzzBlazor.Components.UI
