--- a/Components/Layout/TopNavMenu.razor
+++ b/Components/Layout/TopNavMenu.razor
@@ -30,6 +30,12 @@
                     </NavLink>
                 </li>
                 <li class="nav-item">
+                    <NavLink class="nav-link" href="/fizzbuzzcustomval">
+                        <i class="bi bi-code" />
+                        <span>FizzBuzz Advanced</span>
+                    </NavLink>
+                </li>
+                <li class="nav-item">
                     <NavLink class="nav-link" href="/themes">
                         <i class="bi bi-palette" />
                         <span>Themes</span>
