Tried solving UI quirk but no joy; Removed themes from navigation

--- a/Components/Layout/TopNavMenu.razor
+++ b/Components/Layout/TopNavMenu.razor
@@ -32,13 +32,7 @@
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/fizzbuzzcustomval">
                         <i class="bi bi-code" />
-                        <span>FizzBuzz Advanced</span>
-                    </NavLink>
-                </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="/themes">
-                        <i class="bi bi-palette" />
-                        <span>Themes</span>
+                        <span>FizzBuzz Validator</span>
                     </NavLink>
                 </li>
             </ul>
