--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -15,7 +15,7 @@
                 Built entirely in Blazor WASM, it showcases clean component architecture, interactive state management, and a modular design that’s as refreshing as its branding. Whether you're debugging with a buzz or just sipping on nostalgia, FizzBuzz Cola delivers a sweet taste of .NET craftsmanship.
             </p>
             <div class="mt-3">
-                <a href="/fizzbuzz" class="rounded btn btn-primary">Try It Out</a>
+                <a href="/fizzbuzzcustomval" class="rounded btn btn-primary">Try It Out</a>
             </div>
             <div class="mt-3">
                 Built with pride using:
